[package]
name = "pathfind_demo"
version = "0.1.0"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
edition = "2018"


[dependencies]
num_cpus = "1.10.1"
fps_counter = "1.0.0"
rayon = "1.2"
axgeom = "*"
pathfind = {path="../pathfind"}
ordered-float = "1.0.2"
very_simple_2d = {path="../very_simple_2d"}

