[package]
name = "pathfind_demo"
version = "0.1.0"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
edition = "2018"


[dependencies]
num_cpus = "1.10.1"
fps_counter = "1.0.0"
rayon = "1.2"
axgeom = "*"
pathfind = {path="../pathfind"}
ordered-float = "1.0.2"
egaku2d={path="../egaku2d"}
#very_simple_2d = "0.5"

[patch.crates-io]
#very_simple_2d={path="../very_simple_2d"}

