[package]
name = "pathfind_demo"
version = "0.1.0"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
edition = "2018"


[dependencies]
num_cpus = "1.10.1"
fps_counter = "1.0.0"
rayon = "1.2"
axgeom = "*"
pathfind = {path="../pathfind"}
ordered-float = "1.0.2"
#egaku2d="0.5"
egaku2d={path="../egaku2d"}


[patch."https://github.com/tiby312/dinotree_alg"]
dinotree_alg={path="../dinotree_alg"}



[patch."https://github.com/tiby312/duckduckgeo"]
duckduckgeo={path="../duckduckgeo"}